# rust-web-starter

./: LICENSE  README.md  docker-compose.yml
api_server/: .env  Cargo.toml  Dockerfile  Rocket.toml
api_server/migrations/20170820190143_create_posts/: up.sql
api_server/src/: main.rs  models.rs  pg_pool.rs  posts.rs
web/: Dockerfile  package.json  tsconfig.json  tslint.json
web/src/: App.tsx  index.tsx
