[package]
name = "api_server"
version = "0.1.0"
authors = ["Yale Cason <yale.cason@gmail.com>", "Mike Farrell <mrmikefarrell@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
diesel = { version = "^1.0", features = ["postgres"] }
diesel_infer_schema = { version = "^1.0", features = ["postgres"] }
dotenv = ">= 0.7, < 0.9"
r2d2 = "^0.8.2"
r2d2-diesel = "^1.0"
lazy_static = "0.2.8"
serde = "1.0"
serde_derive = "1.0"
