[package]
name = "api_server"
version = "0.1.0"
authors = ["Yale Cason <yale.cason@gmail.com>", "Mike Farrell <mrmikefarrell@gmail.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
dotenv = "0.10"
r2d2 = "0.8"
lazy_static = "1.1"
serde = "1.0"
serde_derive = "1.0"
